solutions_java/comp_error.txt
Main.java:1: error: reached end of file while parsing
fbfbfbfbffbfgbfb
^
1 error
